--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "final project API ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,16 @@
   "bugs": {
     "url": "https://github.com/PowerHouse-Electronics/API/issues"
   },
-  "homepage": "https://github.com/PowerHouse-Electronics/API#readme"
+  "homepage": "https://github.com/PowerHouse-Electronics/API#readme",
+  "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.3.4",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.1",
+    "path": "^0.12.7"
+  }
 }
