--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   "homepage": "https://github.com/PowerHouse-Electronics/API#readme",
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
+    "chartjs-node-canvas": "^4.1.6",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.3.4",
+    "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
