--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
     "chartjs-node-canvas": "^4.1.6",
+    "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
